extends Area2D

# =====================
# VARIABLES Y NODOS
# =====================
var battle_button : TextureButton
var battle_icon : Sprite2D
var player : CharacterBody2D

var player_in_area := false

# =====================
# INICIALIZACIÃ“N
# =====================
func _ready() -> void:
	print("ğŸ§  [RockBattleArea] Script cargado correctamente (modo mundo)")

	player = get_tree().get_first_node_in_group("jugador") as CharacterBody2D
	if player != null:
		print("âœ… Jugador encontrado:", player.name)
	else:
		push_error("âŒ No se encontrÃ³ jugador en el grupo 'jugador'")

	battle_button = get_node_or_null("UI/BattleButton")
	battle_icon = get_node_or_null("UI/BattleButton/BattleIcon")

	if battle_icon:
		battle_icon.visible = false
	else:
		push_error("âŒ No se encontrÃ³ BattleIcon")

	if battle_button == null:
		push_error("âŒ No se encontrÃ³ 'UI/BattleButton'")
	else:
		battle_button.visible = false
		battle_button.disabled = true
		battle_button.tooltip_text = "AÃºn no puedes atacar âš”ï¸"

		# Conexiones de seÃ±ales
		battle_button.mouse_entered.connect(_on_button_hover)
		battle_button.mouse_exited.connect(_on_button_exit)
		battle_button.pressed.connect(_on_battle_button_pressed)

		print("âœ… BotÃ³n inicializado en posiciÃ³n mundial:", battle_button.global_position)

	# Configurar colisiÃ³n
	var collision = get_node("UI/BattleButton/StaticBody2D/CollisionShape2D")
	var texture_size = battle_button.texture_normal.get_size()
	var shape = RectangleShape2D.new()
	shape.size = texture_size * 2.0
	collision.shape = shape
	collision.position = battle_button.position + texture_size / 2.0

	# Conectar seÃ±ales del Ã¡rea
	body_entered.connect(_on_body_entered)
	body_exited.connect(_on_body_exited)

	# Conectar con el temporizador
	var timer_node = get_node_or_null("../../Timer/Panel/TimerRoot")
	if timer_node == null:
		push_error("âŒ No se pudo encontrar el nodo TimerRoot en la ruta especificada.")
		return

	timer_node.connect("tiempo_especifico_alcanzado", Callable(self, "_on_tiempo_especifico_alcanzado"))


# =====================
# EVENTOS PERSONALIZADOS
# =====================
func _on_tiempo_especifico_alcanzado() -> void:
	print("âœ… SeÃ±al recibida â€” Â¡BotÃ³n habilitado!")
	battle_button.disabled = false
	battle_icon.visible = true
	battle_button.tooltip_text = "Entrar al combate âš”ï¸"


# =====================
# EVENTOS DE ÃREA
# =====================
func _on_body_entered(body: Node) -> void:
	if body == player:
		player_in_area = true
		battle_button.visible = true
		if not battle_button.disabled:
			battle_icon.visible = true
		print("âš”ï¸ Jugador '%s' entrÃ³ al Ã¡rea -> botÃ³n visible" % player.name)


func _on_body_exited(body: Node) -> void:
	if body == player:
		player_in_area = false
		battle_button.visible = false
		battle_icon.visible = false
		print("ğŸƒ Jugador '%s' saliÃ³ del Ã¡rea -> botÃ³n oculto" % player.name)


# =====================
# EVENTOS DE INTERFAZ
# =====================
func _on_button_hover() -> void:
	if battle_button.disabled:
		battle_button.tooltip_text = "AÃºn no puedes atacar âš”ï¸"
	else:
		battle_button.tooltip_text = "Entrar al combate âš”ï¸"


func _on_button_exit() -> void:
	battle_button.tooltip_text = ""


func _on_battle_button_pressed() -> void:
	if battle_button.disabled:
		print("ğŸš« BotÃ³n presionado pero aÃºn deshabilitado.")
		return

	print("âœ… BotÃ³n presionado â€” cambiando a escena 'campoBatalla.tscn'...")
	get_tree().change_scene_to_file("res://src/PantallaAtaque/campoBatalla.tscn")
